@@ -63,6 +63,7 @@ ControlEvent(Control control, Scheduler scheduler, int order)
 {
 	this.control = control;
 	this.order = order;
+	this.scheduler = scheduler;
 	EDSimulator.addControlEvent(scheduler.getNext(), order, this);
 }
 
